# desktop

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.ko.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/desktop/: eslint.config.js  index.html  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: daemon.rs  lib.rs  main.rs  socket.rs  token.rs
apps/desktop/src-tauri/tests/: daemon_ping.rs
apps/desktop/src/data/: DataProvider.test.tsx  DataProvider.tsx  api.test.ts  api.ts  planTree.test.ts  planTree.ts  types.ts
apps/desktop/src/hooks/: useDaemonHealth.test.tsx  useDaemonHealth.ts  useGlobalShortcuts.test.tsx  useGlobalShortcuts.ts
apps/desktop/src/lib/: toast.ts
apps/desktop/src/shell/: BrandMark.test.tsx  BrandMark.tsx  CycleCreateModal.test.tsx  CycleCreateModal.tsx  CycleEditModal.test.tsx  CycleEditModal.tsx  DetailBreadcrumb.test.tsx  DetailBreadcrumb.tsx  DetailDrawer.test.tsx  DetailDrawer.tsx  DetailPanels.test.tsx  DetailPanels.tsx  HelpModal.test.tsx  HelpModal.tsx  PlanCreateModal.test.tsx  PlanCreateModal.tsx  PlanEditModal.test.tsx  PlanEditModal.tsx  ProjectCreateModal.tsx  ProjectSettingsModal.tsx  ProjectSwitcher.test.tsx  ProjectSwitcher.tsx  Sidebar.test.tsx  Sidebar.tsx  (+23 more)
docs/migration/: component-map.md  cutover-checklist.md  sse-patterns.md  tier-scenario-batch.md
scripts/: build-macos-release.sh  release-macos.sh  sync-version.mjs
(+25 files in other folders)
